Basty bet toldy,al azirge kerek emes better zhalasyda statusyn aldy,vacansyia zhariyalaityn functionnyn bazoviy versiyasy qurildy kelesi obnovada style beriledy

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -151,3 +151,24 @@
   background-color: #ca7d18;
   text-decoration: underline;
 }
+
+@media (max-width: 1199px) {
+  
+}
+@media (max-width: 991px) {
+
+}
+@media (max-width: 767px) {
+
+}
+@media (max-width: 575px) {
+
+}
+@media (max-width: 430px) {
+  .logo{
+    display: none;
+  }
+}
+@media (max-width: 320px) {
+  
+}
